05-10 challenge: create element

--- a/05_10/index.html
+++ b/05_10/index.html
@@ -14,6 +14,20 @@
       type="text/css"
       media="all"
     />
+    <style>
+      .nav-menu ul {
+        margin: 0;
+        padding: 3rem 0 0 0;
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+      }
+      .nav-menu ul a {
+        display: block;
+        padding: .5rem 1rem;
+        color: inherit;
+      }
+    </style>
     <script type="module" src="Backpack.js"></script>
     <script type="module" src="script.js"></script>
   </head>
